--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,13 @@
 @import-normalize; /* bring in normalize.css styles */
+@import './components/Profile/Profile.module.css';
+@import './components/Statistics/Statistics.module.css';
+@import './components/Friendlist/FriendList.module.css';
+@import './components/TransactionHistory/TransationHistory-module.css';
 
+#root {
+  display: flex;
+  flex-direction: column;
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
